# flangeMeasureTest

./: .gitignore  CMakeLists.txt  Paras.xml  README copy.md  README.md  info.rc.in  main.cpp  qml.qrc
0.flangeMeasureTest_Log/2025.03/: 2025.03.28_infoLog.txt  2025.03.31_infoLog.txt
0.flangeMeasureTest_Log/2025.04/: 2025.04.01_infoLog.txt  2025.04.07_infoLog.txt  2025.04.08_infoLog.txt
0.galvoMirrorCorrectionTest_Log/2025.03/: 2025.03.26_infoLog.txt  2025.03.28_infoLog.txt
include/HMHaShu/: HM_HashuScan.h
include/VisionMasterSDK/: IVmAffineTransform.h  IVmAnd.h  IVmAngleBisectorFind.h  IVmArray2dCorrect.h  IVmBcr.h  IVmBcr2d.h  IVmBlobFind.h  IVmBlobFindLabels.h  IVmBoxFilter.h  IVmBoxMerge.h  IVmBoxOverlapCalculation.h  IVmBranch.h  IVmBranchString.h  IVmC2CMeasure.h  IVmCalculator.h  IVmCalibBoardCalib.h  IVmCalibTransform.h  IVmCaliper.h  IVmCaliperCorner.h  IVmCaliperEdge.h  IVmCameraIO.h  IVmCameraMap.h  IVmCircleEdgeInsp.h  IVmCircleEdgePairInsp.h  IVmCircleFind.h  IVmCircleFit.h  IVmCnnCharDetect.h  IVmCnnClassify.h  IVmCnnCodeRecg.h  IVmCnnDetect.h  IVmCnnFastFlaw.h  IVmCnnFlaw.h  IVmCnnInspect.h  IVmCnnInstanceSegment.h  IVmCnnRegisterClassify.h  IVmCnnRetrieval.h  IVmCnnSingleCharDetect.h  IVmCnnUnSupervised.h  IVmColorExtract.h  IVmColorMeasure.h  (+132 more)
lib/HMHaShu/: HM_HashuScanDLL.cs  HM_UDM_DLL.cs
lib/VisionMasterSDK/: Mv3dLp.lib  Mv3dLpCfg.ini  iMVS-6000PlatformSDK.lib
src/hal/: CMakeLists.txt
src/hal/DZSTMark/: CMakeLists.txt  DZSTMark.cpp  DZSTMark.h  DZSTMarkDef.cpp  DZSTMarkDef.h
src/hal/HIK3DMVS/: HIK3DMVS.cpp  HIK3DMVS.h  HIK3DMVSDef.cpp  HIK3DMVSDef.h
src/hal/camera/: CMakeLists.txt  cameraControl.cpp  cameraControl.h  cameraCreator.cpp  cameraCreator.h  iCamera.cpp  iCamera.h  iCameraDef.cpp  iCameraDef.h
src/hal/camera/HIK3DMVS/: CMakeLists.txt  HIK3DMVS.cpp  HIK3DMVS.h
src/imageProcess/: CMakeLists.txt  IProcessToolFun.cpp  IProcessToolFun.h  basic.h
src/imageProcess/hikrobotEngine/: CMakeLists.txt  hikrobotEngine.cpp  hikrobotEngine.h  hikrobotEngineDef.cpp  hikrobotEngineDef.h
src/para/: CMakeLists.txt  para.cpp  para.h  readme.txt
src/para/define/: paraDef.cpp  paraDef.h  paraNode.cpp  paraNode.h
src/para/define/paraItem/: nodeItemDef.cpp  nodeItemDef.h  scanSystemParaItem.cpp  scanSystemParaItem.h
src/para/jsPara/: CMakeLists.txt  jsParaInit.cpp
src/qtSingleApplication/: CMakeLists.txt  qtsingleapplication.cpp  qtsingleapplication.h  qtsinglecoreapplication.cpp  qtsinglecoreapplication.h
src/qtSingleApplication/lockedFile/: qtlocalpeer.cpp  qtlockedfile.h  qtlockedfile_win.cpp
src/system/: CMakeLists.txt  basic.cpp  basic.h  sigleClass.h  systemService.cpp  systemService.h
src/system/logSystem/: CMakeLists.txt  debugLog.cpp  logDef.cpp  logDef.h  releaseLog.cpp
src/system/tool/: CMakeLists.txt  fileTool.cpp  fileTool.h
src/system/url/: CMakeLists.txt  url.cpp  url.h
src/system/url/scheme/: CMakeLists.txt  locationFileScheme.cpp  locationFileScheme.h
src/ui/: CMakeLists.txt  basic.cpp  basic.h  mainWindow.cpp  mainWindow.h  mainWindowDef.h
src/ui/boxCorrectWindow/: CMakeLists.txt  boxCorrectWindow.cpp
src/ui/controlWindow/: CMakeLists.txt  controlWindow.cpp  controlWindow.h
src/ui/graphicsWindow/: CMakeLists.txt  graphicsView.cpp  graphicsView.h  graphicsViewTest.cpp  graphicsViewTest.h
src/ui/graphicsWindow/tool/: CMakeLists.txt  toolFun.cpp  toolFun.h
src/ui/inputDialog/: CMakeLists.txt  inputDialog.cpp  inputDialog.h
src/ui/logTextBrowser/: CMakeLists.txt  logBrowser.cpp  logBrowser.h  textBrowser.cpp  textBrowser.h
src/ui/menuBar/: CMakeLists.txt  menuBar.cpp  menuBar.h  userDef.h
src/ui/messageBox/: CMakeLists.txt  messageBox.cpp  messageBox.h
src/ui/multipointCorrectWindow/: CMakeLists.txt  multipointCorrectWindow.cpp  multipointCorrectWindow.h
src/ui/setParaWindow/: CMakeLists.txt  setParaWindow.cpp  setParaWindow.h
src/ui/setParaWindow/paraTree/: paraEditor.cpp  paraEditor.h  paraModel.cpp  paraModel.h  paraTreeDelegate.cpp  paraTreeDelegate.h  paraTreeDelegateDraw.h
